Sets up my config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
+title: Daniel Glatstein's Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Daniel Glatstein
 simple_search: https://www.google.com/search
 description:
 
