adds my first blog post and deployment

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://danielglatstein.github.io
 title: Daniel Glatstein's Blog
 subtitle: A blogging framework for hackers.
 author: Daniel Glatstein
